# RajLisp-02

./: .pre-commit-config.yaml  Dockerfile  README.md  TASK_COMPLETION_GUIDE.md  WARP.md  app.py  dev-requirements.txt  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
attached_assets/: GUIDE WHAT TO BE DONE FOR EFFICIENC.txt  RAJKUMAR NOTES NOT TO BE DELETED.txt  RajLisp_1753250874524.html  bridge_gad_app_1754174198163.py  bug removal prompt GENERAL.md  bug removal prompt.md  input_1754174198163.xlsx  stair_1753250071597._DC  stair_1753250071600.DCL  staircase_1753250071600.LSP  staircase_1753250071600._LS  staircase_1753250071600.sld
attached_assets/LISP_1753250055085/: BEAML.LSP  BEAMRECT.LSP  BEAMTEE.LSP  COLUCRCL.LSP  (+10 more)
client/: package-lock.json  package.json
modules/: __init__.py  bridge.py  circular_column.py  circular_column_footing.py  l_beam.py  lintel.py  pmgsy_road.py  rect_column_footing.py  rectangular_beam.py  rectangular_column.py  road_cross_section.py  road_lsection.py  road_plan.py  staircase.py  sunshade.py  t_beam.py
pages/: 01_Circular_Column.py  02_Rectangular_Column.py  03_Circular_Column_Footing.py  04_Rectangular_Column_Footing.py  05_T_Beam.py  06_L_Beam.py  07_Lintel.py  08_Sunshade.py  09_Staircase.py  10_Road_L_Section.py  11_Road_Plan.py  12_Road_Cross_Section.py  13_PMGSY_Road.py  Bridge.py
server/: routes.ts  storage.ts
shared/: schema.ts
tests/: test_calculations.py  test_dxf_audit.py
utils/: __init__.py  calculations.py  dxf_utils.py
(+25 files in other folders)
