[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ezdxf>=1.4.2",
    "numpy>=2.3.2",
    "streamlit>=1.47.1",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","SIM","C90"]
ignore = []

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
